examples/valid-resources/deployment-with-labels.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-backend
  namespace: green
  labels:
    service: web-backend
    version: v1
    team: green
spec:
  replicas: 1
  selector:
    matchLabels:
      service: web-backend
      version: v1
      team: green
  strategy: {}
  template:
    metadata:
      labels:
        service: web-backend
        version: v1
        team: green
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
