examples/valid-resources/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    equipo: verde
    servicio: web-backend
    version: v1
  name: web-backend
  namespace: verde
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    equipo: verde
    servicio: web-backend
    version: v1
  type: ClusterIP
