examples/valid-resources/ingress-allowed-domain.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-backend
  namespace: green
  labels:
    service: web-backend
    version: v1
    team: green
spec:
  rules:
  - host: backend-st.api.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
